objects/BMCServiceDesk__Normalization_Rule__c.object
<CustomObject>
    <fields>
        <fullName>BMCServiceDesk__FKNormalization_Metadata__c</fullName>
        <label>Normalization Metadata</label>
        <referenceTo>BMCServiceDesk__Normalization_Metadata__c</referenceTo>
        <relationshipLabel>Normalization Rules</relationshipLabel>
        <relationshipName>Normalization_Rules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Field_Value__c</fullName>
        <label>Field Value</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Master_Rule__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Master Rule</label>
        <referenceTo>BMCServiceDesk__Normalization_Rule__c</referenceTo>
        <relationshipLabel>Master Rules</relationshipLabel>
        <relationshipName>Master_Rules</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>BMCServiceDesk__Rule_Type__c</fullName>
        <label>Rule Type</label>
        <picklist>
            <picklistValues>
                <fullName>Normalization Rule</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Ignored Value Rule</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
</CustomObject>